--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
   <artifactId>sbt</artifactId>
   <version>1.2-SNAPSHOT</version>
   <packaging>hpi</packaging>
-  <name>Hudson sbt plugin</name>
-  <description>Build your scala project using sbt in Hudson</description>
-  <url>http://wiki.hudson-ci.org/display/HUDSON/sbt+plugin</url>
+  <name>Jenkins sbt plugin</name>
+  <description>Build your scala project using sbt in Jenkins</description>
+  <url>http://wiki.jenkins-ci.org/display/JENKINS/sbt+plugin</url>
 
   <developers>
     <developer>
@@ -35,9 +35,9 @@
   </distributionManagement>  
   
   <scm>
-    <connection>scm:git:git://github.com/hudson/sbt-plugin.git</connection>
-    <developerConnection>scm:git:git@github.com:hudson/sbt-plugin.git</developerConnection>
-    <url>http://github.com/hudson/sbt-plugin</url>
+    <connection>scm:git:git://github.com/jenkinsci/sbt-plugin.git</connection>
+    <developerConnection>scm:git:git@github.com:jenkinsci/sbt-plugin.git</developerConnection>
+    <url>https://github.com/jenkinsci/sbt-plugin</url>
   </scm>
   
   <build>
