--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,14 @@
     </developer>
   </developers>
   
+  <licenses>
+    <license>
+      <name>The MIT License</name>
+      <url>http://www.opensource.org/licenses/mit-license.php</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+  
   <scm>
     <connection>scm:git:git://github.com/jenkinsci/sbt-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/sbt-plugin.git</developerConnection>
